--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 .body {
-	background-color: green;
+	background-color: 0x1111;
 }
 
 .container {
@@ -7,8 +7,12 @@
 	padding-top: 30px;
 }
 
+.todoex{
+
+}
+
 .editbtn {
-	padding-top: 50px;
+	margin-top: 150px;
 }
 
 .uploadbtn{
