--- a/style.css
+++ b/style.css
@@ -1,5 +1,10 @@
 h2 {
 	text-align: center;
+	border: 1px #e4e4e4 solid;
+	font: bold 3em Helvetica, Arial, Sans-Serif;
+	text-shadow: 1px -1px 0px hsla(0, 0%, 50%, 1), 2px -2px 0px hsla(0, 0%, 55%, 1), 3px -3px 0px hsla(0, 0%, 60%, 1), 4px -4px 0px hsla(0, 0%, 65%, 1), 5px -5px 0px hsla(0, 0%, 70%, 1), 6px -6px 0px hsla(0, 0%, 75%, 1), 7px -7px 0px hsla(0, 0%, 80%, 1), 8px -8px 0px hsla(0, 0%, 85%, 1), 9px -9px 0px hsla(0, 0%, 90%, 1);
+  	padding: .2em;
+  	margin: 0;
 }
 
 h3 {
@@ -8,9 +13,9 @@ h3 {
 }
 
 .container {
-
 	padding-top: 30px;
 }
+
 
 .todoex{
 
